more fixes to menu on small screens

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -212,19 +212,13 @@ body {
 
   .overlaynav-content {
     position: relative;
-    top: 10%;
     width: 100%;
     max-width: 450px;
     text-align: center;
-    margin: 30px auto;
+    margin: 0 auto;
     -webkit-overflow-scrolling: touch;
   }
 
-  @media only screen and (max-width: 600px) {
-    .overlaynav-content{
-        top: 5px;
-    }
-  }
 /* 
 .overlaynav .closebtn {
     position: absolute;
@@ -248,6 +242,8 @@ body {
     color: #818181;
     display: block;
     transition: 0.3s;
+    margin: auto;
+    max-width: 200px;
 }
 
 
